# datac-consumer

./: .env.sample  Makefile  README.md  datac-consumer-monitor.sh  pyproject.toml
.github/workflows/: build.yml  push.yml
.workflows/: push.yml
node-monitoring/: node-exporter-grafana-dashboard.json  start-monitoring.sh  stop-monitoring.sh
raspberry-downloads/test_16-17_marzo/vehicle_positions/: 2024-03-16T21_17_59.binpb  2024-03-16T21_20_29.binpb  2024-03-16T21_21_29.binpb  2024-03-16T21_23_31.binpb  2024-03-16T21_24_31.binpb  2024-03-16T21_26_32.binpb  2024-03-16T21_29_34.binpb  2024-03-16T21_31_35.binpb  2024-03-16T21_32_37.binpb  2024-03-16T21_34_38.binpb  2024-03-16T21_37_40.binpb  2024-03-16T21_38_42.binpb  2024-03-16T21_39_42.binpb  2024-03-16T21_40_43.binpb  2024-03-16T21_43_45.binpb  2024-03-16T21_44_46.binpb  2024-03-16T21_46_49.binpb  2024-03-16T21_48_50.binpb  2024-03-16T21_52_54.binpb  2024-03-16T22_02_03.binpb  2024-03-16T22_10_12.binpb  2024-03-16T22_15_17.binpb  2024-03-16T22_18_19.binpb  2024-03-16T22_20_25.binpb  2024-03-16T22_21_26.binpb  (+564 more)
raspberry-downloads/vehicle_positions/: 2024-03-16T21_19_28.binpb  2024-03-16T21_22_30.binpb  2024-03-16T21_25_32.binpb  2024-03-16T21_27_33.binpb  2024-03-16T21_28_34.binpb  2024-03-16T21_30_35.binpb  2024-03-16T21_33_38.binpb  2024-03-16T21_35_39.binpb  2024-03-16T21_36_40.binpb  2024-03-16T21_41_44.binpb  2024-03-16T21_42_44.binpb  2024-03-16T21_45_48.binpb  2024-03-16T21_47_49.binpb  2024-03-16T21_49_52.binpb  2024-03-16T21_50_53.binpb  2024-03-16T21_51_53.binpb  2024-03-16T21_53_55.binpb  2024-03-16T21_55_56.binpb  2024-03-16T21_56_56.binpb  2024-03-16T21_57_57.binpb  2024-03-16T21_58_57.binpb  2024-03-16T21_59_59.binpb  2024-03-16T22_00_59.binpb  2024-03-16T22_03_04.binpb  2024-03-16T22_04_04.binpb  2024-03-16T22_05_06.binpb  2024-03-16T22_06_07.binpb  2024-03-16T22_07_09.binpb  2024-03-16T22_08_10.binpb  2024-03-16T22_09_11.binpb  2024-03-16T22_11_13.binpb  2024-03-16T22_13_15.binpb  2024-03-16T22_14_16.binpb  2024-03-16T22_16_17.binpb  2024-03-16T22_17_18.binpb  2024-03-16T22_19_24.binpb  2024-03-16T22_22_29.binpb  2024-03-16T22_23_29.binpb  2024-03-16T22_25_31.binpb  2024-03-16T22_26_32.binpb  (+600 more)
src/: main.py
src/alerts/: interface.py  mail_gun.py
src/downloaders/: helpers.py  interface.py  static_gtfs.py  vehicle_positions.py
src/file_system/: interface.py  local.py
(+6777 files in other folders)
