[tool.poetry]
name = "datac-consumer"
version = "0.1.0"
description = "Consumer of Atac feed and schedule updates"
authors = ["Francesco Lucantoni <fran.lucantoni@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.12"
pydantic-settings = "^2.10"

[tool.poetry.group.dev.dependencies]
isort = "^6.0"
pylint = "^3.3"
mypy = "^1.17"
black = "^25.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint."MESSAGE CONTROL"]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
